test: fix bug with icon on mobile

--- a/src/components/Buttons/Buttons.module.less
+++ b/src/components/Buttons/Buttons.module.less
@@ -8,8 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
-  white-space: nowrap;
+  // gap: 8px;
+  // white-space: nowrap;
 
   &:disabled {
     pointer-events: none;
@@ -77,6 +77,8 @@
 
 .circle.primary,
 .circle.secondary {
+  padding: 0;
+
   &.large {
     height: 40px;
     width: 40px;
